plugins {
	id 'java'
}

repositories {
	mavenCentral()
}

java {
	sourceCompatibility =  JavaVersion.VERSION_15
    targetCompatibility = JavaVersion.VERSION_15
}

group = 'com.dailychallenges'
version = '1.0.0-SNAPSHOT'

dependencies {
	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
	testImplementation 'org.junit.jupiter:junit-jupiter-params:5.7.0'
	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
}

test {
    useJUnitPlatform()
}
/** to enable preview features, e.g. "record" */
tasks.withType(JavaCompile) {
    options.compilerArgs += '--enable-preview'
}
tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}